# dedupmarcxml

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  requirements.txt  update_version.py
dedup/: __init__.py  briefrecord.py  score.py  score_editions.py  score_extent.py  score_publishers.py  tools.py
dedupmarcxml/: __init__.py  briefrecord.py  evaluate.py  tools.py  version.py
dedupmarcxml/data/: editions_data.pickle  mlp_classifier_book_model.pickle  randomforest_book_model.pickle  randomforest_general_model.pickle  randomforest_music_model.pickle
dedupmarcxml/score/: __init__.py  editions.py  extent.py  methods.py  names.py  publishers.py
docs/: briefrecord.rst  conf.py  index.rst
requests/: request_1100648595064697688_1.xml  request_1361136482093430899_1.xml  request_1407614161510669693_1.xml  request_1414228420062895646_1.xml  request_1474344289017598024_1.xml  request_176323573097435272_1.xml  request_2082257713193340891_1.xml  request_2167457261995076279_1.xml  request_2177205066375216008_1.xml  request_2194901003183361400_1.xml  request_692609732574824916_1.xml  request_712448840419940525_1.xml  request_8386402630682788_1.xml  request_859199374768405233_1.xml  request_985094631499507468_1.xml
tests/: test_briefrecord.py  test_score.py  test_score_editions.py  test_score_extent.py  test_score_names.py  test_score_publishers.py  test_tools.py
tests/data_for_testing/: record1.pkl  record2.pkl  record3.pkl
tests/requests/: request_1100648595064697688_1.xml  request_1361136482093430899_1.xml  (+14 more)
utils/: create_editions_data.py
